# guitarix

./: .gitignore  README.md
app/src/main/cpp/: CMakeLists.txt  engine.cpp  engine.h  jni_bridge.cpp
app/src/main/cpp/effects/: compressor.cpp  compressor.h  effect.h  noise_gate.cpp  noise_gate.h
app/src/main/cpp/oboe/: CMakeLists.txt
app/src/main/java/com/kaonixx/guitarix/: App.kt  BleScanner.kt  GuitarEngine.kt  MainViewModel.kt  SystemAudioCapture.kt  WavLoader.kt
app/src/main/java/com/kaonixx/guitarix/ui/: EffectsScreen.kt  MainScreen.kt
app/src/main/java/com/kaonixx/guitarix/ui/tone_matcher/: ToneMatcherScreen.kt
app/src/main/java/com/kaonixx/guitarix/ui/transcribe/: TranscribeScreen.kt
app/src/main/java/com/kaonixx/guitarix/ui/tuner/: TunerScreen.kt
app/src/main/res/drawable/: ic_launcher_fg.xml
